# kuksa.val.services

./: .clang-format  .dockerignore  .flake8  .gitattributes  .gitignore  .licensechecker.yml  .mypy.ini  CONTRIBUTING.md  NOTICE-3RD-PARTY-CONTENT.md  NOTICE.md  README.md  prepare_release.sh  prerequisite_settings.json  setup.cfg
.dapr/: config.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: .yamllint.yml  dependabot.yml
.github/actions/post-container-location/: action.yml
.github/linters/: .pylintrc  .yamllint.yml
.github/workflows/: README.md  carsim.yml  dev_container_build.yml  dev_container_build_prerelease.yml  driver.yml  hvac_service.yml  integration_test.yml  license_check.yml  lint.yml  mock_service.yml  release.yml  release_prepare.yml  seat_service.yml  seat_service_build.yml  seat_service_debug_build.yml  seat_service_docu_build.yml  seat_service_release.yml  seat_service_release_build.yml  seat_service_seatctrl_test.yml  val-vulnerabilityscan.yml  val_dev_container_build.yml  val_dev_container_build_prerelease.yml  val_hvac_service.yml  val_integration_test.yml  val_license_check.yml  val_lint.yml  val_release.yml  val_release_prepare.yml  val_vservice_build.yml  val_vservice_docu_build.yml  val_vservice_release.yml  val_vservice_seatctrl_test.yml  vservice_build.yml  vservice_docu_build.yml  vservice_release.yml  vservice_seatctrl_test.yml  vulnerabilityscan.yml
.github/workflows/doc/: ci.drawio
.github/workflows/scripts/: install-ci-tooling.sh
basic_kuksa_rw/: README.md  bicycle_runner.py  bicycle_sim.py  requirements.txt  test_rw.py
carsim_service/: .gitignore  Dockerfile  README.md  bicycle-sim.py  bicycle_runner.py  bicycle_sim.py  carsim.py  docker-build.sh  driver_base.py  driver_runner.py  helper.py  hvacservice.py  requirements.txt  setup.py  simple_driver.py  update-protobuf.sh
carsim_service/sdv/databroker/v1/: broker_pb2.py  collector_pb2.py  collector_pb2_grpc.py  types_pb2.py
docs/: README.md  interface_guideline.md  vehicle_service.md
driver_service/: Dockerfile  README.md  driver.py  driver_base.py  driver_runner.py  setup.py  simple_driver.py
hvac_service/: .gitignore  Dockerfile  README.md  docker-build.sh  hvac_gui.py  hvacservice.py  requirements-dev.txt  requirements-gui.txt  requirements.txt  setup.py  testclient.py  update-protobuf.sh
hvac_service/kuksa/val/v1/: types_pb2.py
hvac_service/sdv/databroker/v1/: broker_pb2.py  broker_pb2_grpc.py  (+4 more)
integration_test/: .gitignore  README.md  broker_subscribe.py  it-config  it-hvac-cli.sh  it-seat-move.sh  it-setup.sh  requirements-dev.txt  requirements.txt  setup.py  task-hvac-cli.sh  task-seat-move.sh  test_feeder.py  test_hvac.py  test_val_seat.py  update-protobuf.sh  vdb_helper.py
integration_test/volumes/dbc2val/: dbcreader.py  it-can.dbc  it-mapping.yml  it-vss_4.0-dogmode.json  it-vss_4.0.json
mock_service/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-build.sh  mock.py  mockservice.py  pydoc-markdown.yml  requirements-dev.txt  requirements.txt  setup.py  update-api-docs.sh
mock_service/doc/: concept.md
mock_service/doc/pydoc/: action.md  animator.md  behavior.md  datapoint.md  loader.md  mocking-dsl.md  trigger.md  types.md
mock_service/examples/: README.md  seat_mock.py  threaded_mock.py
mock_service/lib/: __init__.py  action.py  animator.py  baseservice.py  behavior.py  behaviorexecutor.py  datapoint.py  dsl.py  loader.py  mockeddatapoint.py  trigger.py  types.py
mock_service/mock/: mock.py  mockservice.py  test_mock.py  test_new_mock.py
mock_service/showcase_gui/: GUI.py  README.md
mock_service/test/: test_animator.py  test_behavior.py
proto/: README.md
seat_service/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build-debug.sh  build-docu.sh  build-release.sh  build-seatctrl.sh  clang-format.sh  conanfile.txt  docker-build.sh  vscode-conan.sh
seat_service/docs/: SeatService.drawio
seat_service/docs/doxygen/: doxyfile  doxygen-awesome-sidebar-only-darkmode.css  doxygen-awesome.css
seat_service/proto/sdv/edge/comfort/seats/v1/: seats.proto
seat_service/src/: CMakeLists.txt
seat_service/src/examples/broker_feeder/: CMakeLists.txt  broker_feeder.cc
seat_service/src/examples/can_send/: CMakeLists.txt  can_send.cc
seat_service/src/examples/can_subscribe/: CMakeLists.txt  can_subscribe.cc
seat_service/src/examples/seat_svc_client/: CMakeLists.txt  seat_svc_client.cc
seat_service/src/lib/broker_feeder/: CMakeLists.txt  collector_client.cc  collector_client.h  create_datapoint.h  data_broker_feeder.cc  data_broker_feeder.h  kuksa_client.cc  kuksa_client.h
seat_service/src/lib/can_helpers/: CMakeLists.txt  can_bcm_interface.cc  can_bcm_interface.h  can_raw_socket.cc  can_raw_socket.h
seat_service/src/lib/grpc_services/: CMakeLists.txt
seat_service/src/lib/grpc_services/seats_grpc_service/: CMakeLists.txt  seats_grpc_service.cc  seats_grpc_service.h
seat_service/src/lib/seat_adjuster/: CMakeLists.txt  seat_adjuster.cc  seat_adjuster.h
seat_service/src/lib/seat_adjuster/seat_controller/: CMakeLists.txt  README.md  main.cc  seat_controller.cc  seat_controller.h  seat_ecu.dbc
seat_service/src/lib/seat_adjuster/seat_controller/tests/: CMakeLists.txt  integration_seatctrl.cc  test_seatctrl_api.cc
seat_service/src/lib/seat_adjuster/seat_controller/tests/cansim/: CMakeLists.txt  README.md  cansim_lib.c  cansim_lib.h  main.c  seatadjuster_engine.c  seatadjuster_engine.h
seat_service/src/lib/seat_adjuster/seat_controller/tests/mock/: mock_unix_socket.cc  mock_unix_socket.h
seat_service/src/lib/seat_adjuster/seat_controller/tools/: README.md  can-decode  cangen-SECU1_STAT  cansim  ecu-reset  motor-dec  motor-inc  motor-stop  motor-swipe  setup-vcan  sim-SECU1_STAT  val_start.sh
seat_service/toolchains/: target_aarch64_Debug  target_aarch64_Release  target_x86_64_Debug  target_x86_64_Release
tools/: Dockerfile  check-license.sh  check-scripts.sh  update-kuksa-proto.sh
tools/containers/: README.md  can-forward.sh  ctr-image-import.sh
tools/vxcan/: Makefile  README.md  install-vxcan.sh
(+33 files in other folders)
